--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ select {
   border-radius: 3px;
 }
 button {
-  background-color: #0b5351;
+  background-color: #003ffc;
   color: white;
   border: none;
   cursor: pointer;
